v1.0.1
- Fixed bug when writing flac tags with non-ascii characters with perl 5.10, that can damage the file
- Fixed searching for artist pictures on last.fm
- Fixed replaygain tags not wrote correctly (only one of the 5 fields was written, and with the locale's decimal separator, rather than ".")
- use Net::DBus::GLib when available rather the hack to connect Net::DBus to the Glib mainloop
- Fixed some resizing problems with the FB container
- Renamed the mozembed plugin to webcontext, it can now use either Gtk2::MozEmbed or Gtk2::WebKit
- added -add command-line option to add files/folders to the library
- added -playlist, -enqueue, -addplaylist, and -insertplaylist command-line options
- updated translations : spanish (jjgomera), polish (tizzilzol team)
- added an oxygen icon theme (Zeltak & pete)


v1.0
- Fixed division by zero error when reading flac files with unknown length, but their length will be 0 for now
- Fixed wraping of artist/album names for artists/albums with no picture in mosaic mode
- In "run system command" command, added the variable %F, replaced by the list of selected files in the current window
- Fixed the VolSlider in vertical mode, so that the max value is at the top
- Changed the namespace used by the DBus interface
- lyrics plugin : fixed searching lyrics with "exotic" characters (coded by more than one byte in utf8)
- Fixed the "last played" and "last skipped" columns in the SongTree
- Added EnqueueArtist and EnqueueAlbum commands
- When Adding more than one song to the queue, the current song won't be added (let me know if you want an option to disable this)
- updated find_cover plugin
- updated spanish translations (by Juanjo)

v0.964
fixes :
- fixed gnome multimedia keys plugin to work with gnome 2.22
- updated the "picture finder" plugin to work with current google image pages
- fixed the "remove existing" option for comments in mass-tagging dialog
- fixed behaviour of the previous button
- some fixes to the equalizer support